# cubingtools

./: .gitignore  LICENSE.txt  README.md  algorithm.py  constants.py  cube.py  pyproject.toml
src/: testing.py
src/cubingtools/: __init__.py  _enumHelpers.py  algorithm.py  algorithmExtensions.py  constants.py  cube.py  error.py  metric.py  modifier.py  move.py  valid.py
tests/: test_algo.py  test_algo_blackbox.py  test_algo_comm_conj.py  test_algo_order.py  test_algo_parse.py  test_algo_reduce.py  test_algo_simplify.py  test_algorithmBlackBox.py  test_cubeN.py  test_metric.py  test_move.py  test_move_parse.py  test_parseAlgo.py  test_parseMove.py  test_scramble.py  test_validate.py
